# sento-map

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
back/: .coverage  Dockerfile  alembic.ini  main.py  pyproject.toml
back/alembic/: env.py
back/app/: auth.py  config.py  main.py
back/tests/: conftest.py
batch/: Dockerfile  db.py  fetcher.py  main.py  osm_geocoder.py  parser.py  pyproject.toml  scraper.py
batch/parsers/: __init__.py  aichi.py  akita.py  base.py  chiba.py  ehime.py  fukui.py  fukuoka.py  fukushima.py  gifu.py  gunma.py  hiroshima.py  hokkaido.py  hyogo.py  ibaraki.py  ishikawa.py  iwate.py  kagawa.py  kagoshima.py  kanagawa.py  kochi.py  kumamoto.py  kyoto.py  mie.py  miyagi.py  miyazaki.py  nagasaki.py  nara.py  niigata.py  okinawa.py  osaka.py  saitama.py  shiga.py  shimane.py  shizuoka.py  tochigi.py  tokushima.py  tokyo.py  tottori.py  toyama.py  (+3 more)
batch/tests/: test_aichi_parser.py  test_akita_parser.py  test_chiba_parser.py  test_ehime_parser.py  test_fukui_parser.py  test_fukushima_parser.py  test_gifu_parser.py  test_gunma_parser.py  test_hiroshima_parser.py  test_hokkaido_parser.py  test_hyogo_parser.py  test_ibaraki_parser.py  test_ishikawa_parser.py  test_iwate_parser.py  test_kagawa_parser.py  test_kagoshima_parser.py  test_kanagawa_parser.py  test_kochi_parser.py  test_kumamoto_parser.py  test_mie_parser.py  test_miyagi_parser.py  test_miyazaki_parser.py  test_nagasaki_parser.py  test_nara_parser.py  test_niigata_parser.py  test_okinawa_parser.py  test_osaka_parser.py  test_osm_geocoder.py  test_saitama_parser.py  (+11 more)
(+120 files in other folders)
